--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
   "dependencies": {
     "angular": "^1.6.2",
     "angular-route": "^1.6.2",
-    "express": "^4.14.1"
-  },
-  "devDependencies": {
+    "express": "^4.14.1",
     "clean-webpack-plugin": "^0.1.15",
     "copy-webpack-plugin": "^4.0.1",
     "html-webpack-plugin": "^2.28.0",
