--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   "dependencies": {
     "angular": "^1.6.2",
     "angular-route": "^1.6.2",
-    "express": "^4.14.1",
+    "bootstrap": "3.2.0",
     "clean-webpack-plugin": "^0.1.15",
     "copy-webpack-plugin": "^4.0.1",
+    "express": "^4.14.1",
     "html-webpack-plugin": "^2.28.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
