--- a/package.json
+++ b/package.json
@@ -30,11 +30,9 @@
     "express": "^4.14.1",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "raw-loader": "^0.5.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
     "webpack-merge": "^3.0.0"
-  },
-  "devDependencies": {
-    "raw-loader": "^0.5.1"
   }
 }
