--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "express": "^4.14.1",
     "html-loader": "^0.4.5",
+    "html-webpack-include-assets-plugin": "0.0.4",
     "html-webpack-plugin": "^2.28.0",
     "raw-loader": "^0.5.1",
     "webpack": "^2.2.1",
