--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,5 +20,9 @@
   },
   "plugins": [
     "html"
-  ]
+  ],
+  "settings": {
+    "html/indent": "+2",
+    "html/report-bad-indent": "error"
+  }
 }
