beautified html with jsbeautify

--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "build": "webpack --progress",
     "postinstall": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint app/addListing --ext .js && htmlhint app/addListing/view.html",
-    "lintHtml": "htmlhint --config=.htmlhintrc app/**/*.html"
+    "lint": "eslint app --ext .js && htmlhint app/**/*.html"
   },
   "precommit": [
-    "lintHtml"
+    "lint"
   ],
   "keywords": [
     "angular"
@@ -44,7 +43,6 @@
   "devDependencies": {
     "eslint": "^3.18.0",
     "eslint-config-es5": "^0.5.0",
-    "eslint-plugin-html": "^2.0.1",
     "htmlhint": "^0.9.13",
     "pre-commit": "^1.2.2"
   }
