--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -31,6 +31,7 @@
     "indent_size": 2,
     "indent_level": 0,
     "indent_with_tabs": false,
+    "keep_array_indentation": true,
     "eol": "\\n",
     "end_with_newline": true,
     "preserve_newlines": true,
