--- a/package.json
+++ b/package.json
@@ -27,15 +27,18 @@
   },
   "dependencies": {
     "angular": "^1.6.2",
+    "angular-animate": "^1.6.3",
     "angular-ui-router": "^0.4.2",
     "bootstrap": "3.2.0",
     "clean-webpack-plugin": "^0.1.15",
     "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.27.3",
     "express": "^4.14.1",
     "html-loader": "^0.4.5",
     "html-webpack-include-assets-plugin": "0.0.4",
     "html-webpack-plugin": "^2.28.0",
     "raw-loader": "^0.5.1",
+    "style-loader": "^0.16.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
     "webpack-merge": "^3.0.0"
