--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "angular": "^1.6.2",
     "angular-animate": "^1.6.3",
+    "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-router": "^0.4.2",
     "bootstrap": "3.2.0",
     "clean-webpack-plugin": "^0.1.15",
