--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "start": "webpack-dev-server --open",
     "build": "webpack --progress",
     "postinstall": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "pretest": "webpack",
+    "test": "karma start karma.conf.js",
+    "pretest-single-run": "webpack",
+    "test-single-run": "karma start karma.conf.js --single-run",
     "lint": "eslint app --ext .js --config .eslintrc.yml --cache && htmlhint --config .htmlhintrc app/**/*.html"
   },
   "precommit": [
-    "lint"
+    "lint",
+    "test-single-run"
   ],
   "keywords": [
     "angular"
@@ -34,8 +38,6 @@
     "clean-webpack-plugin": "^0.1.15",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.27.3",
-    "eslint-config-angular": "^0.5.0",
-    "eslint-plugin-angular": "^2.2.1",
     "express": "^4.14.1",
     "html-loader": "^0.4.5",
     "html-webpack-include-assets-plugin": "0.0.4",
@@ -47,9 +49,21 @@
     "webpack-merge": "^3.0.0"
   },
   "devDependencies": {
+    "angular-mocks": "^1.6.3",
     "eslint": "^3.18.0",
+    "eslint-config-angular": "^0.5.0",
     "eslint-config-es5": "^0.5.0",
+    "eslint-plugin-angular": "^2.2.1",
+    "eslint-plugin-jasmine": "^2.2.0",
     "htmlhint": "^0.9.13",
+    "jasmine": "^2.5.3",
+    "karma": "^1.5.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.3",
+    "phantomjs": "^2.1.7",
     "pre-commit": "^1.2.2"
   }
 }
