--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "angular-animate": "^1.6.3",
     "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-router": "^0.4.2",
+    "angularjs-dropdown-multiselect": "^2.0.0-beta.7",
     "bootstrap": "3.2.0",
     "clean-webpack-plugin": "^0.1.15",
     "copy-webpack-plugin": "^4.0.1",
