--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -24,7 +24,12 @@
   },
   "css": {
     "indent_char": " ",
-    "indent_size": 2
+    "indent_size": 2,
+    "indent_with_tabs": false,
+    "newline_between_rules": true,
+    "eol": "\\n",
+    "end_with_newline": false,
+    "selector_separator_newline": false
   },
   "js": {
     "indent_char": " ",
