--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "style-loader": "^0.16.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
-    "webpack-merge": "^3.0.0"
+    "webpack-merge": "^3.0.0",
+    "credit-card-type": "^5.0.1"
   },
   "devDependencies": {
     "angular-mocks": "1.6.3",
