--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "lint": "eslint app --ext .js --config .eslintrc.yml --cache && htmlhint --config .htmlhintrc app/**/*.html"
   },
   "precommit": [
-    "lint",
-    "test-single-run"
+    "lint"
   ],
   "keywords": [
     "angular"
