--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   "dependencies": {
     "angular": "1.6.3",
     "angular-animate": "1.6.3",
+    "angular-date-picker": "^1.3.5",
     "angular-local-storage": "0.5.2",
+    "angular-material": "^1.1.4",
     "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-router": "^0.4.2",
     "angularjs-dropdown-multiselect": "^2.0.0-beta.6",
