--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "html-loader": "^0.4.5",
     "html-webpack-include-assets-plugin": "0.0.4",
     "html-webpack-plugin": "^2.28.0",
+    "prerender-node": "^2.7.4",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.16.1",
     "webpack": "^2.2.1",
