--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "test-single-run": "karma start karma.conf.js --single-run",
     "lint": "eslint app --ext .js --config .eslintrc.yml --cache && htmlhint --config .htmlhintrc app/**/*.html"
   },
-  "precommit": [
-    "lint"
-  ],
+  //"precommit": [
+  //  "lint"
+//  ],
   "keywords": [
     "angular"
   ],
@@ -46,6 +46,7 @@
     "html-loader": "^0.4.5",
     "html-webpack-include-assets-plugin": "0.0.4",
     "html-webpack-plugin": "^2.28.0",
+    "prerender-node": "https://registry.npmjs.org/prerender-node/-/prerender-node-2.7.4.tgz",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.16.1",
     "webpack": "^2.2.1",
