--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "html-webpack-plugin": "^2.28.0",
     "prerender-node": "^2.7.4",
     "raw-loader": "^0.5.1",
-    "snapsearch-client-nodejs": "^1.1.6",
+    "snapsearch-client-nodejs": "https://registry.npmjs.org/snapsearch-client-nodejs/-/snapsearch-client-nodejs-1.1.6.tgz",
     "style-loader": "^0.16.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
