--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "html-loader": "^0.4.5",
     "html-webpack-include-assets-plugin": "0.0.4",
     "html-webpack-plugin": "^2.28.0",
-    "prerender-node": "^2.7.4",
+    "prerender-node": "https://registry.npmjs.org/prerender-node/-/prerender-node-2.7.4.tgz",
     "raw-loader": "^0.5.1",
     "snapsearch-client-nodejs": "https://registry.npmjs.org/snapsearch-client-nodejs/-/snapsearch-client-nodejs-1.1.6.tgz",
     "style-loader": "^0.16.1",
