--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "angularjs-dropdown-multiselect": "^2.0.0-beta.6",
     "bootstrap": "3.2.0",
     "clean-webpack-plugin": "^0.1.15",
+    "connect-s4a": "0.0.9",
     "copy-webpack-plugin": "^4.0.1",
     "credit-card-type": "^5.0.1",
     "css-loader": "^0.27.3",
